proptest-derive2/tests/compile-fail/E0001-lifetime.rs
#[macro_use]
extern crate proptest_derive;

#[derive(Debug, Arbitrary)] //~ ERROR: [proptest_derive, E0001]
struct Foo<'a>(&'a ());
